# TikkaMasalAI-frontend

./: Makefile  README.md  main.py  pyproject.toml
src/: config.py  explain.py  heatmap.py  llm.py  main.py  predict.py
